# evalita2026-multipride-UniBO-FICLIT

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  data_analysis.ipynb  main.py  pyproject.toml  requirements.txt  setup.cfg
data/: train_en.csv  train_es.csv
data/raw/: test_it.csv  train_it.csv
notebooks/: data_analysis.ipynb  data_preprocessing.ipynb  test_subtask1a.ipynb  test_subtask2a.ipynb  test_subtaskB1.ipynb  training.ipynb  training_subtask1a.ipynb  training_subtaskA1.ipynb  training_subtaskB1.ipynb
notes/: log.md
src/: evaluation.py  preprocessing.py
src/multipride/: __init__.py  data_utils.py  device_utils.py  evaluation.py  inference.py  preprocessing.py  training_utils.py
