[project]
name = "evalita2026-multipride-unibo-ficlit"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = []

[project.optional-dependencies]
cpu = [
  "torch==2.0.1",
]
cu117 = [
  "torch==2.0.1",
]

[tool.uv]
conflicts = [
  [
    { extra = "cpu" },
    { extra = "cu117" },
  ],
]

[tool.uv.sources]
torch = [
  { index = "pytorch-cpu", extra = "cpu" },
  { index = "pytorch-cu117", extra = "cu117" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu117"
url = "https://download.pytorch.org/whl/cu117"
explicit = true

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
    "pre-commit>=4.6.0",
]
